add section of setting up IDE